<resources >
    <string name="app_name">翼天气</string>

    <string name="no_data">无数据</string>

    <string name="setting">设置</string>
    <string name="exit">退出</string>


    //城市初始值
    <string name="chengdu">成都</string>
    <string name="zhanjiang">湛江</string>
    <string name="change_main_image">修改主页图片</string>
    <string  name="setting_about" formatted="false">作者: \n GitHub:FENG-MASTER</string>

    <string name="version">1.1</string>
    <string name="main">主页</string>
    <string name="chart">图表</string>
    <string name="suggestion">各项指数</string>
</resources>
