<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/g1">
        <item android:id="@+id/menu_item_main" android:title="@string/main" android:icon="@drawable/delicious"/>
        <item android:id="@+id/menu_item_chart" android:title="@string/chart" android:icon="@drawable/line_chart"/>
        <item android:id="@+id/menu_item_other" android:title="@string/suggestion" android:icon="@drawable/doughnut_chart"/>

    </group>

    <group android:id="@+id/g2">
        <item android:id="@+id/menu_item_change_main_image" android:title="@string/change_main_image" android:icon="@drawable/alter"/>
        <item android:id="@+id/menu_item_setting" android:title="@string/setting" android:icon="@drawable/setting"/>

    </group>
    <item android:id="@+id/menu_item_exit" android:title="@string/exit" android:icon="@drawable/exit"/>

    <item android:id="@+id/menu_test" android:title="test" android:icon="@drawable/car_icon"/>
</menu>